force-app/main/default/objects/AI_Configuration__c/AI_Configuration__c.object-meta.xml
<CustomObject>
    <label>AI Configuration</label>
    <nameField>
        <label>Provider Developer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>