force-app/main/default/objects/AI_Configuration__c/fields/Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>Connection_Status__c</fullName>
    <description>Result of the most recent connection test.</description>
    <label>Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Tested</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>