force-app/main/default/objects/AI_Configuration__c/fields/Last_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Test_Date__c</fullName>
    <description>When the connection test was last run.</description>
    <label>Last Test Date</label>
    <type>DateTime</type>
</CustomField>