force-app/main/default/objects/AI_Configuration__c/fields/Last_Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Test_Result__c</fullName>
    <description>Message from the most recent connection test.</description>
    <label>Last Test Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>