force-app/main/default/objects/AI_Configuration__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description
  >Developer name of the AI_Provider_Config__mdt record this status reflects.</description>
    <label>Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>